# vkez

./: Cargo.toml  rustfmt.toml
examples/: add.comp.glsl
vkez/: Cargo.toml
vkez-bootstrap/: Cargo.toml
vkez-bootstrap/src/: debug_utils.rs  device_builder.rs  instance_builder.rs  physical_device_criteria.rs  queue_family_request.rs
vkez-core/: Cargo.toml
vkez-core/src/: descriptor_sets.rs  lib.rs  shaders.rs
vkez-macros/: Cargo.toml
vkez-macros/src/: lib.rs
vkez-macros/src/shader_set/: mod.rs  parser.rs
vkez/src/: lib.rs  main.rs
vkez/src/bootstrap/: debug_utils.rs  device_builder.rs  instance_builder.rs  mod.rs  physical_device_criteria.rs  queue_family_request.rs
