[package]
name = "vkez-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
vkez-core = { path = "../vkez-core" }

proc-macro2 = "1.0.53"
proc-macro-error = "1.0.4"
syn = { version = "2.0.10", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1.0.26"
structmeta = "0.2.0"

shaderc = "0.8.2"
