[package]
name = "vkez"
version = "0.1.0"
edition = "2021"

[features]
default = ["bootstrap"]
bootstrap = ["vkez-bootstrap"]

[dependencies]
vkez-core = { path = "../vkez-core" }
vkez-bootstrap = { path = "../vkez-bootstrap", optional = true }
vkez-macros = { path = "../vkez-macros" }

tracing-subscriber = "0.3.16"
eyre = "0.6.8"
